@@ -123,6 +123,9 @@ utf8_string uppercase(const utf8_string&);
 //! Returns a lowercased version of the string
 utf8_string lowercase(const utf8_string&);
 
+//! Truncates a string.
+void truncate_as_wstring(std::string& str, const size_t size);
+
 bool wildcard_string_match(const std::string& str, const std::string& match);
 
 }
